# nonebot-plugin-hltv

./: .env.example  .gitignore  README.md  example_bot.py  nonebot.ini  plugin.manifest.xml  pyproject.toml  requirements_dev.txt  run_bot.py  test_plugin.py
api-server/: requirements.txt
api-server/api/: index.py
api-server/cloudflare-worker/: README.md  worker.js  wrangler.toml
nonebot_plugin_hltv/: __init__.py  config.py  matcher.py  real_client.py  web_ui.py
nonebot_plugin_hltv/templates/: index.html  results.html
test/: local_test.py  test_real_client.py
